bug fix: wrong color in css

--- a/static/common-dark.css
+++ b/static/common-dark.css
@@ -38,11 +38,7 @@ strong {
     background-color: black;
 }
 
-a {
-    color: inherit;
-}
-
-#article p > a {
+#markdown a {
     color: var(--primary-color);
     filter: brightness(300%);
     font-weight: 500;
