--- a/static/common-light.css
+++ b/static/common-light.css
@@ -33,10 +33,12 @@ hr {
     background-color: #EEE;
 }
 
-a {
+#markdown a {
     color: var(--primary-color);
+    font-weight: 500;
 }
 
-a:hover {
+.university a:hover {
+    color: var(--primary-color);
     text-decoration: underline;
 }
