--- a/static/common.css
+++ b/static/common.css
@@ -125,6 +125,7 @@ li > p {
 }
 
 a {
+    color: inherit;
     text-decoration: none;
     text-underline-offset: 0.2em;
     text-decoration-thickness: from-font;
